[hotfix-36135][core]修复脏数据在k8s环境下local 与 remote 地址不一致时出现找不到插件异常